syntax = "proto3";
package proto;
option go_package = ".;proto";
import "google/protobuf/struct.proto";

message PluginNameRequest {}

message PluginNameResponse {
    string plugin_name = 1;
}

message PolicyNamesRequest {}

message PolicyNamesResponse {
    repeated string policy_names = 1;
}

message ConfigurePluginRequest {
    google.protobuf.Struct plugin_config = 1;
}

message ConfigurePluginResponse {}

message ValidateRequest {
    bytes admission_request = 1;
}

message ValidateResponse {
  map<string, PolicyValidateResponse> policy_responses = 1;
}

message PolicyValidateResponse {
    repeated ResourceViolation resource_violations = 1;
    repeated PatchOperation patch_operations = 2;
}

message ResourceViolation {
    string resource_name = 1;
    string resource_kind = 2;
    string namespace = 3;
    string violation = 4;
    string policy = 5;
    string error = 6;

}

message PatchOperation {
    string op = 1;
    string path = 2;
    google.protobuf.Value value = 3;
}

service KRailPlugin {
    rpc PluginName(PluginNameRequest) returns (PluginNameResponse);
    rpc PolicyNames(PolicyNamesRequest) returns (PolicyNamesResponse);
    rpc ConfigurePlugin(ConfigurePluginRequest) returns (ConfigurePluginResponse);
    rpc Validate(ValidateRequest) returns (ValidateResponse);
}
